# PODSV_Visualisierungsprojekt

./: pyproject.toml  vis_vars_challenge_wuelsliv.ipynb
data/raw/: 2634_Selects2023_PES_Data_v2.0.csv
data/raw/2634_Selects2023_PES_Data_v2.0/: 2634_Selects2023_PES_Data_v2.0.dta
data_acquisition/: load_select_2023.py
docs/: charta_1.1_1.2.qmd  data_report.quarto_ipynb_1  data_report.quarto_ipynb_2  data_report.quarto_ipynb_3  meeting_notes.qmd  project_charta.qmd  projekt_charta_javi.qmd  vorlage_project_charta.qmd
eda/: EDA_Selects2023.ipynb  eda_selects_2023.ipynb  test.ipynb
