[project]
name = "PODSV_Project"
version = "0.1.0"
description = "Visualisation Project of Livia Wuelser, Kenan Smaili and Javier Martinez Alvarez"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "jupyterlab>=4.4.7",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "seaborn>=0.13.2",
    "ydata-profiling>=4.12.2",
]
